add new website from server na

--- a/xem-phim-bo/tap-doan-hac-am-o-me-cung/index.html
+++ b/xem-phim-bo/tap-doan-hac-am-o-me-cung/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1657,18 +1657,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-can-ve-cua-hoa-khoi-3" title="Siêu Cận Vệ Của Hoa Khôi 3">
+          <a class="list-top-movie-link" href="/phim-moi/yowamushi-pedal-special-ride" title="Yowamushi Pedal SPECIAL RIDE">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-can-ve-cua-hoa-khoi-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yowamushi-pedal-special-ride-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Cận Vệ Của Hoa Khôi 3
+             Yowamushi Pedal SPECIAL RIDE
             </span>
             <span class="list-top-movie-item-en">
-             Siêu Cận Vệ Của Hoa Khôi 3
+             Yowamushi Pedal SPECIAL RIDE
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-lam-mon" title="Thiếu Lâm Môn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-lam-mon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Lâm Môn
+            </span>
+            <span class="list-top-movie-item-en">
+             Hand of Death (Shao Lin men)
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bombay-begums" title="Bombay Begums">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bombay-begums-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bombay Begums
+            </span>
+            <span class="list-top-movie-item-en">
+             Bombay Begums
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1679,40 +1723,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jane-phan-2" title="Jane (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/khu-toi-song-phan-4" title="Khu tôi sống (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jane-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-toi-song-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jane (Phần 2)
+             Khu tôi sống (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Jane (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cac-co-gai-toi-tu-khong-gian" title="Các Cô Gái Tới Từ Không Gian">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cac-co-gai-toi-tu-khong-gian-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Các Cô Gái Tới Từ Không Gian
-            </span>
-            <span class="list-top-movie-item-en">
-             Space Babes from Outer Space
+             On My Block (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1723,43 +1745,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-smallville-phan-3" title="Thị Trấn Smallville (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-vo-thuat" title="Nữ Hoàng Võ Thuật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-smallville-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-vo-thuat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thị Trấn Smallville (Phần 3)
+             Nữ Hoàng Võ Thuật
             </span>
             <span class="list-top-movie-item-en">
-             Smallville (Season 3)
+             The Queen of KungFu
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dan-choi-kieu-uc" title="Dân Chơi Kiểu Úc">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dan-choi-kieu-uc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Dân Chơi Kiểu Úc
-            </span>
-            <span class="list-top-movie-item-en">
-             A Few Best Men
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
