add new website from server na

--- a/xem-phim-bo/luu-quang-dan/index.html
+++ b/xem-phim-bo/luu-quang-dan/index.html
@@ -1192,7 +1192,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1662,18 +1662,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-sat-tap-su-2" title="Cảnh Sát Tập Sự">
+          <a class="list-top-movie-link" href="/phim-moi/bo-ngo-lan-dau-tien" title="Bỡ Ngỡ Lần Đầu Tiên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-tap-su-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ngo-lan-dau-tien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảnh Sát Tập Sự
+             Bỡ Ngỡ Lần Đầu Tiên
             </span>
             <span class="list-top-movie-item-en">
-             Midnight Runners
+             유부녀의 사정일지
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuc-chuyen-di-vui-ve" title="Chúc chuyến đi vui vẻ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuc-chuyen-di-vui-ve-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chúc chuyến đi vui vẻ
+            </span>
+            <span class="list-top-movie-item-en">
+             Godspeed
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1684,18 +1706,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phong-cach-hollywood" title="Phong cách Hollywood">
+          <a class="list-top-movie-link" href="/phim-moi/tong-do" title="Tông đồ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-cach-hollywood-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tong-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phong cách Hollywood
+             Tông đồ
             </span>
             <span class="list-top-movie-item-en">
-             Styling Hollywood
+             Apostle
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/luat-bao-thu" title="Luật Báo Thù">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-bao-thu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Luật Báo Thù
+            </span>
+            <span class="list-top-movie-item-en">
+             Acts of Vengeance
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1706,65 +1750,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-hanh-kien" title="Thiên Hành Kiện">
+          <a class="list-top-movie-link" href="/phim-moi/con-bao-kinh-hoang" title="Cơn Bão Kinh Hoàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-hanh-kien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-bao-kinh-hoang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiên Hành Kiện
+             Cơn Bão Kinh Hoàng
             </span>
             <span class="list-top-movie-item-en">
-             Heroes
+             The Perfect Storm
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pororo-cuoc-phieu-luu-den-dinh-thu-rong" title="Pororo: Cuộc Phiêu Lưu Đến Dinh Thự Rồng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pororo-cuoc-phieu-luu-den-dinh-thu-rong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Pororo: Cuộc Phiêu Lưu Đến Dinh Thự Rồng
-            </span>
-            <span class="list-top-movie-item-en">
-             Pororo: Dragon Castle Adventure
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/star-wars-biet-doi-nhan-ban-dac-biet-phan-3" title="Star Wars: Biệt Đội Nhân Bản Đặc Biệt (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-wars-biet-doi-nhan-ban-dac-biet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Star Wars: Biệt Đội Nhân Bản Đặc Biệt (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Star Wars: The Bad Batch Season 3
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
