add new website from server na

--- a/xem-phim-bo/thien-su-toi-loi/index.html
+++ b/xem-phim-bo/thien-su-toi-loi/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             13
+             14
             </dd>
             <br/>
            </dl>
@@ -1756,18 +1756,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khuc-ca-tu-lau-hai" title="Khúc Ca Từ Lầu Hai">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-y" title="Thánh Y">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khuc-ca-tu-lau-hai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-y-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khúc Ca Từ Lầu Hai
+             Thánh Y
             </span>
             <span class="list-top-movie-item-en">
-             Songs from the Second Floor
+             The Physician
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1778,40 +1778,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-giai-loi-nguyen-mua-cuoi" title="Hóa Giải Lời Nguyền: Mùa Cuối">
+          <a class="list-top-movie-link" href="/phim-moi/nua-dem-o-paris" title="Nửa đêm ở Paris">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-giai-loi-nguyen-mua-cuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nua-dem-o-paris-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hóa Giải Lời Nguyền: Mùa Cuối
+             Nửa đêm ở Paris
             </span>
             <span class="list-top-movie-item-en">
-             Fruits Basket: The Final
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/snag" title="Snag">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/snag-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Snag
-            </span>
-            <span class="list-top-movie-item-en">
-             Snag
+             Midnight in Paris
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1822,21 +1800,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-nam-dai-chien" title="My Nam Dai Chien">
+          <a class="list-top-movie-link" href="/phim-moi/bi-quyet-tinh-yeu" title="Bí Quyết Tình Yêu">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nam-dai-chien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-quyet-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             My Nam Dai Chien
+             Bí Quyết Tình Yêu
             </span>
             <span class="list-top-movie-item-en">
-             No Breathing
+             The Trick of Life and Love
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1844,21 +1822,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shrek-3" title="Shrek 3">
+          <a class="list-top-movie-link" href="/phim-moi/hoat-dong-cua-soi" title="Hoạt động của sói">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shrek-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoat-dong-cua-soi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Shrek 3
+             Hoạt động của sói
             </span>
             <span class="list-top-movie-item-en">
-             Shrek the Third
+             Wolf Operation
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-phep-thuat-hac-tam" title="Thế Giới Phép Thuật: Hắc Tam">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-phep-thuat-hac-tam-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thế Giới Phép Thuật: Hắc Tam
+            </span>
+            <span class="list-top-movie-item-en">
+             Black Clover: Dark Triad
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
